<resources>
    <string name="app_name">ReactiveApp</string>
    <string name="log_in">Log In</string>
    <string name="your_login">Your Login</string>
    <string name="sign_in">Sign In</string>
    <string name="your_password">Your Password</string>
    <string name="create_account">Create Account</string>
    <string name="write_your_login">Write Your Login</string>
    <string name="loading">Loading...</string>
    <string name="write_your_password">Write Your Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="your_password_symbols_count_must_be_8">Your Password symbols count must be > 8</string>
    <string name="your_password_symbols_count_to_much_then_8">your_password symbols count to much then 8</string>
    <string name="your_password_or_login_is_incorrect">Your password or Login is Incorrect!</string>
    <string name="write_your_username">Write Your Username</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="write_your_new_username">Write your new Username</string>
    <string name="auto_sliding_images">Auto Sliding images</string>
    <string name="title_activity_memories_day">MemoriesDayActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="title_activity_main_ok">MainActivityOK</string>
    <string name="search_hint">Search...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
